python/testData/highlighting/fStringTerminatedByQuoteOfFStringLiteralInFormatPartBefore312.py
s = f'{42:{f<error descr="Python version 3.11 does not allow nesting of string literals with the same quote type inside f-strings">'</error>foo'}}'